--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": ">=5.4",
-        "adlawson/vfs": "^0.12.1"
+        "adlawson/vfs": "^0.12.1",
+        "xtlsoft/xcoroutine": "dev-master"
     },
     "license": "MIT",
     "authors": [
